--- a/index.html
+++ b/index.html
@@ -1,98 +1,68 @@
-{\rtf1\ansi\ansicpg1252\cocoartf2513
-\cocoatextscaling0\cocoaplatform0{\fonttbl\f0\fswiss\fcharset0 Helvetica;}
-{\colortbl;\red255\green255\blue255;}
-{\*\expandedcolortbl;;}
-\margl1440\margr1440\vieww10800\viewh8400\viewkind0
-\pard\tx720\tx1440\tx2160\tx2880\tx3600\tx4320\tx5040\tx5760\tx6480\tx7200\tx7920\tx8640\pardirnatural\partightenfactor0
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Fly with Rehan</title>
+    <link rel="stylesheet" href="styles.css">
+</head>
+<body>
+    <header>
+        <h1>Fly with Rehan</h1>
+        <nav>
+            <ul>
+                <li><a href="#home">Home</a></li>
+                <li><a href="#about">About Me</a></li>
+                <li><a href="#tools">Tools</a></li>
+                <li><a href="#blogs">Blogs</a></li>
+            </ul>
+        </nav>
+    </header>
 
-\f0\fs24 \cf0 <!DOCTYPE html>\
-<html lang="en">\
-<head>\
-    <meta charset="UTF-8">\
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">\
-    <title>Online Tools Hub</title>\
-    <style>\
-        body \{\
-            font-family: Arial, sans-serif;\
-            margin: 0;\
-            padding: 0;\
-            background-color: #f4f4f4;\
-        \}\
-        header \{\
-            background-color: #333;\
-            color: #fff;\
-            padding: 1em;\
-            text-align: center;\
-        \}\
-        nav \{\
-            margin: 1em 0;\
-            text-align: center;\
-        \}\
-        nav a \{\
-            margin: 0 15px;\
-            color: #333;\
-            text-decoration: none;\
-            font-weight: bold;\
-        \}\
-        nav a:hover \{\
-            text-decoration: underline;\
-        \}\
-        .container \{\
-            width: 80%;\
-            margin: 0 auto;\
-        \}\
-        .tool-list \{\
-            list-style-type: none;\
-            padding: 0;\
-        \}\
-        .tool-list li \{\
-            background-color: #fff;\
-            margin: 10px 0;\
-            padding: 15px;\
-            border-radius: 5px;\
-            box-shadow: 0 0 5px rgba(0, 0, 0, 0.1);\
-        \}\
-        .tool-list a \{\
-            color: #333;\
-            text-decoration: none;\
-            font-size: 18px;\
-        \}\
-        .tool-list a:hover \{\
-            text-decoration: underline;\
-        \}\
-        footer \{\
-            background-color: #333;\
-            color: #fff;\
-            padding: 1em;\
-            text-align: center;\
-        \}\
-    </style>\
-</head>\
-<body>\
-    <header>\
-        <h1>Online Tools Hub</h1>\
-        <p>Your go-to place for useful online tools</p>\
-    </header>\
-\
-    <nav>\
-        <a href="#tool1">Tool 1</a>\
-        <a href="#tool2">Tool 2</a>\
-        <a href="#tool3">Tool 3</a>\
-        <a href="#tool4">Tool 4</a>\
-    </nav>\
-\
-    <div class="container">\
-        <ul class="tool-list">\
-            <li id="tool1"><a href="https://example.com/tool1" target="_blank">Online Tool 1</a></li>\
-            <li id="tool2"><a href="https://example.com/tool2" target="_blank">Online Tool 2</a></li>\
-            <li id="tool3"><a href="https://example.com/tool3" target="_blank">Online Tool 3</a></li>\
-            <li id="tool4"><a href="https://example.com/tool4" target="_blank">Online Tool 4</a></li>\
-        </ul>\
-    </div>\
-\
-    <footer>\
-        <p>&copy; 2024 Online Tools Hub. All rights reserved.</p>\
-    </footer>\
-</body>\
-</html>\
-}
+    <main>
+        <section id="home">
+            <h2>Welcome to Fly with Rehan</h2>
+            <p>Your go-to destination for tools, blogs, and more. Explore the sections to find useful resources and insights.</p>
+        </section>
+
+        <section id="about">
+            <h2>About Me</h2>
+            <p>Hello! I'm Rehan, and I'm passionate about sharing useful tools and writing insightful blogs. Stay tuned for more updates and resources.</p>
+        </section>
+
+        <section id="tools">
+            <h2>Tools</h2>
+            <div class="tool">
+                <h3>Tool 1</h3>
+                <p>Description of Tool 1.</p>
+                <a href="https://example.com/tool1" target="_blank">Use Tool 1</a>
+            </div>
+            <div class="tool">
+                <h3>Tool 2</h3>
+                <p>Description of Tool 2.</p>
+                <a href="https://example.com/tool2" target="_blank">Use Tool 2</a>
+            </div>
+            <!-- Add more tools as needed -->
+        </section>
+
+        <section id="blogs">
+            <h2>Blogs</h2>
+            <div class="blog">
+                <h3>Blog Post 1</h3>
+                <p>Summary or excerpt of Blog Post 1.</p>
+                <a href="https://example.com/blog1" target="_blank">Read More</a>
+            </div>
+            <div class="blog">
+                <h3>Blog Post 2</h3>
+                <p>Summary or excerpt of Blog Post 2.</p>
+                <a href="https://example.com/blog2" target="_blank">Read More</a>
+            </div>
+            <!-- Add more blog posts as needed -->
+        </section>
+    </main>
+
+    <footer>
+        <p>&copy; 2024 Fly with Rehan. All rights reserved.</p>
+    </footer>
+</body>
+</html>
