--- a/index.html
+++ b/index.html
@@ -3,17 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Fly with Rehan</title>
+    <title>FlywithRehan</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <header>
-        <h1>Fly with Rehan</h1>
+        <h1>FlywithRehan</h1>
         <nav>
             <ul>
-                <li><a href="#home">Home</a></li>
+                <li><a href="index.html">Home</a></li>
                 <li><a href="#about">About Me</a></li>
-                <li><a href="#tools">Tools</a></li>
+                <li><a href="Tools.html">Tools</a></li>
                 <li><a href="#blogs">Blogs</a></li>
             </ul>
         </nav>
