--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
     <main>
         <section id="home">
-            <h2>Welcome to Fly with Rehan</h2>
+            <h2>Welcome to Rehan's Website</h2>
             <p>Your go-to destination for tools, blogs, and more. Explore the sections to find useful resources and insights.</p>
         </section>
 
@@ -62,7 +62,7 @@
     </main>
 
     <footer>
-        <p>&copy; 2024 Fly with Rehan. All rights reserved.</p>
+        <p>&copy; 2024 FlywithRehan. All rights reserved.</p>
     </footer>
 </body>
 </html>
