--- a/AI.html
+++ b/AI.html
@@ -7,7 +7,10 @@
     <style>
         body { font-family: Arial, sans-serif; }
         #chatbox { width: 300px; height: 400px; border: 1px solid #ccc; padding: 10px; overflow-y: scroll; }
-        #userinput { width: 100%; padding: 10px; }
+        #chat-container { display: flex; flex-direction: column; }
+        #userinput-container { display: flex; }
+        #userinput { flex: 1; padding: 10px; }
+        #sendbtn { padding: 10px; cursor: pointer; }
         .message { margin: 5px 0; }
         .user { color: blue; }
         .bot { color: green; }
@@ -15,7 +18,12 @@
 </head>
 <body>
     <div id="chatbox"></div>
-    <input type="text" id="userinput" placeholder="Type a message..." />
+    <div id="chat-container">
+        <div id="userinput-container">
+            <input type="text" id="userinput" placeholder="Type a message..." />
+            <button id="sendbtn">Send</button>
+        </div>
+    </div>
 
     <script src="chatbot.js"></script>
 </body>
