--- a/AI.html
+++ b/AI.html
@@ -3,28 +3,68 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Simple Chatbot</title>
+    <title>Chatbot</title>
     <style>
-        body { font-family: Arial, sans-serif; }
-        #chatbox { width: 300px; height: 400px; border: 1px solid #ccc; padding: 10px; overflow-y: scroll; }
-        #chat-container { display: flex; flex-direction: column; }
-        #userinput-container { display: flex; }
-        #userinput { flex: 1; padding: 10px; }
-        #sendbtn { padding: 10px; cursor: pointer; }
-        .message { margin: 5px 0; }
-        .user { color: blue; }
-        .bot { color: green; }
+        body {
+            font-family: Arial, sans-serif;
+        }
+
+        #chat-container {
+            display: flex;
+            flex-direction: column;
+            height: 90vh;
+            width: 40%;
+            margin: auto;
+            border: 1px solid #ccc;
+            padding: 10px;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+        }
+
+        #chat-box {
+            flex-grow: 1;
+            overflow-y: auto;
+            border-bottom: 1px solid #ccc;
+            padding-bottom: 10px;
+        }
+
+        #input-area {
+            display: flex;
+            margin-top: 10px;
+        }
+
+        #user-input {
+            flex-grow: 1;
+            padding: 10px;
+            border: 1px solid #ccc;
+            border-radius: 4px;
+        }
+
+        #send-btn {
+            padding: 10px 20px;
+            border: none;
+            background-color: #007BFF;
+            color: white;
+            border-radius: 4px;
+            cursor: pointer;
+        }
+
+        #send-btn:hover {
+            background-color: #0056b3;
+        }
+
+        .message {
+            margin-bottom: 10px;
+        }
     </style>
 </head>
 <body>
-    <div id="chatbox"></div>
     <div id="chat-container">
-        <div id="userinput-container">
-            <input type="text" id="userinput" placeholder="Type a message..." />
-            <button id="sendbtn">Send</button>
+        <div id="chat-box"></div>
+        <div id="input-area">
+            <input type="text" id="user-input" placeholder="Type a message...">
+            <button id="send-btn">Send</button>
         </div>
     </div>
-
     <script src="chatbot.js"></script>
 </body>
 </html>
