--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>FlywithRehan</title>
     <link rel="stylesheet" href="styles.css">
+    <link rel="icon" href="https://example.com/favicon.ico" type="image/x-icon">
 </head>
 <body>
     <header>
@@ -13,7 +14,7 @@
             <ul>
                 <li><a href="index.html">Home</a></li>
                 <li><a href="#about">About Me</a></li>
-                <li><a href="Tools.html">Tools</a></li>
+                <li><a href="#tools">Tools</a></li>
                 <li><a href="#blogs">Blogs</a></li>
             </ul>
         </nav>
@@ -33,9 +34,29 @@
         <section id="tools">
             <h2>Tools</h2>
             <div class="tool">
-                <h3>Tool 1</h3>
-                <p>Description of Tool 1.</p>
-                <a href="https://example.com/tool1" target="_blank">Use Tool 1</a>
+                <h3>Ind Stock Market</h3>
+                <div class="tradingview-widget-container">
+                    <div id="tradingview_pJiiCuKh"></div>
+                    <script type="text/javascript" src="https://s3.tradingview.com/tv.js"></script>
+                    <script type="text/javascript">
+                    new TradingView.widget(
+                    {
+                    "width": 980,
+                    "height": 610,
+                    "symbol": "BSE:SENSEX",
+                    "interval": "D",
+                    "timezone": "Etc/UTC",
+                    "theme": "light",
+                    "style": "1",
+                    "locale": "en",
+                    "toolbar_bg": "#f1f3f6",
+                    "enable_publishing": false,
+                    "allow_symbol_change": true,
+                    "container_id": "tradingview_pJiiCuKh"
+                    }
+                    );
+                    </script>
+                </div>
             </div>
             <div class="tool">
                 <h3>Tool 2</h3>
