--- a/index.html
+++ b/index.html
@@ -5,18 +5,36 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>FlywithRehan</title>
     <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <link rel="icon" href="https://example.com/favicon.ico" type="image/x-icon">
 </head>
 <body>
     <header>
         <h1>FlywithRehan</h1>
-        <nav>
-            <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="#about">About Me</a></li>
-                <li><a href="#tools">Tools</a></li>
-                <li><a href="#blogs">Blogs</a></li>
-            </ul>
+        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+            <a class="navbar-brand" href="index.html">Home</a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav ml-auto">
+                    <li class="nav-item">
+                        <a class="nav-link" href="#about">About Me</a>
+                    </li>
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" href="#" id="toolsDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                            Tools
+                        </a>
+                        <div class="dropdown-menu" aria-labelledby="toolsDropdown">
+                            <a class="dropdown-item" href="tool1.html">Ind Stock Market</a>
+                            <a class="dropdown-item" href="#">Tool 2</a>
+                        </div>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#blogs">Blogs</a>
+                    </li>
+                </ul>
+            </div>
         </nav>
     </header>
 
@@ -29,41 +47,6 @@
         <section id="about">
             <h2>About Me</h2>
             <p>Hello! I'm Rehan, and I'm passionate about sharing useful tools and writing insightful blogs. Stay tuned for more updates and resources.</p>
-        </section>
-
-        <section id="tools">
-            <h2>Tools</h2>
-            <div class="tool">
-                <h3>Ind Stock Market</h3>
-                <div class="tradingview-widget-container">
-                    <div id="tradingview_pJiiCuKh"></div>
-                    <script type="text/javascript" src="https://s3.tradingview.com/tv.js"></script>
-                    <script type="text/javascript">
-                    new TradingView.widget(
-                    {
-                    "width": 980,
-                    "height": 610,
-                    "symbol": "BSE:SENSEX",
-                    "interval": "D",
-                    "timezone": "Etc/UTC",
-                    "theme": "light",
-                    "style": "1",
-                    "locale": "en",
-                    "toolbar_bg": "#f1f3f6",
-                    "enable_publishing": false,
-                    "allow_symbol_change": true,
-                    "container_id": "tradingview_pJiiCuKh"
-                    }
-                    );
-                    </script>
-                </div>
-            </div>
-            <div class="tool">
-                <h3>Tool 2</h3>
-                <p>Description of Tool 2.</p>
-                <a href="https://example.com/tool2" target="_blank">Use Tool 2</a>
-            </div>
-            <!-- Add more tools as needed -->
         </section>
 
         <section id="blogs">
@@ -85,5 +68,8 @@
     <footer>
         <p>&copy; 2024 FlywithRehan. All rights reserved.</p>
     </footer>
+
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.2/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
