--- a/index.html
+++ b/index.html
@@ -10,47 +10,48 @@
 </head>
 <body>
     <header>
-        <h1>FlywithRehan</h1>
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
-            <a class="navbar-brand" href="index.html">Home</a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav ml-auto">
-                    <li class="nav-item">
-                        <a class="nav-link" href="#about">About Me</a>
-                    </li>
-                    <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" id="toolsDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                            Tools
-                        </a>
-                        <div class="dropdown-menu" aria-labelledby="toolsDropdown">
-                            <a class="dropdown-item" href="tool1.html">Ind Stock Market</a>
-                            <a class="dropdown-item" href="#">Tool 2</a>
-                        </div>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#blogs">Blogs</a>
-                    </li>
-                </ul>
+            <div class="container">
+                <div class="navbar-collapse collapse justify-content-center" id="navbarNav">
+                    <ul class="navbar-nav">
+                        <li class="nav-item">
+                            <a class="nav-link" href="index.html">Home</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#about">About Me</a>
+                        </li>
+                        <li class="nav-item dropdown">
+                            <a class="nav-link dropdown-toggle" href="#" id="toolsDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                Tools
+                            </a>
+                            <div class="dropdown-menu" aria-labelledby="toolsDropdown">
+                                <a class="dropdown-item" href="tool1.html">Ind Stock Market</a>
+                                <a class="dropdown-item" href="#">Tool 2</a>
+                            </div>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#blogs">Blogs</a>
+                        </li>
+                    </ul>
+                </div>
             </div>
         </nav>
     </header>
 
     <main>
-        <section id="home">
+        <section id="home" class="container mt-5">
             <h2>Welcome to Rehan's Website</h2>
             <p>Your go-to destination for tools, blogs, and more. Explore the sections to find useful resources and insights.</p>
         </section>
 
-        <section id="about">
+        <section id="about" class="container mt-5">
             <h2>About Me</h2>
             <p>Hello! I'm Rehan, and I'm passionate about sharing useful tools and writing insightful blogs. Stay tuned for more updates and resources.</p>
         </section>
 
-        <section id="blogs">
-            <h2>Blogs</h2>
+        <!-- Blogs Section -->
+        <section id="blogs" class="container mt-5">
+            <h2>Latest Blogs</h2>
             <div class="blog">
                 <h3>Blog Post 1</h3>
                 <p>Summary or excerpt of Blog Post 1.</p>
