--- a/index.html
+++ b/index.html
@@ -10,15 +10,16 @@
 </head>
 <body>
     <header>
-        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <nav class="navbar navbar-expand-lg navbar-dark">
             <div class="container">
-                <div class="navbar-collapse collapse justify-content-center" id="navbarNav">
+                <a class="navbar-brand" href="index.html">FlywithRehan</a>
+                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse justify-content-center" id="navbarNav">
                     <ul class="navbar-nav">
                         <li class="nav-item">
                             <a class="nav-link" href="index.html">Home</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#about">About Me</a>
                         </li>
                         <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle" href="#" id="toolsDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
@@ -43,6 +44,7 @@
             <h2>Welcome to Rehan's Website</h2>
             <p>Your go-to destination for tools, blogs, and more. Explore the sections to find useful resources and insights.</p>
         </section>
+
         <!-- Blogs Section -->
         <section id="blogs" class="container mt-5">
             <h2>Latest Blogs</h2>
